[package]
name = "prec-helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["serde_crate", "ndarray/serde"]

[dependencies]
rand = { version = "0.9.1", features = ["small_rng"] }
ndarray = { version = "0.16.1", features = ["approx"] }
ndarray-linalg = { version = "0.17", optional = true }
num-traits = "0.2.19"
rand_xoshiro = "0.7.0"

[dev-dependencies]
approx = "0.5"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]
